--- a/phonegap/index.html
+++ b/phonegap/index.html
@@ -1,31 +1,14 @@
-<!DOCTYPE html> 
-<html> 
+<!DOCTYPE html>
+<html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>test</title>
 	<meta name="viewport" content="user-scalable=no, width=device-width" />
+
 	<script type="text/javascript" src="phonegap.js"></script>
-	<style>
-		html {
-			background: black;
-			color: white;
-			-webkit-user-select: none; /* to avoid copy paste possibility on html */
-			font-family: Georgia;
-		}
-		@-webkit-keyframes mathafakah {
-			0% { -webkit-transform: scale(1); }
-			50% { -webkit-transform: scale(0.8); }
-			100% { -webkit-transform: scale(1); }
-		}
-		#yeah.shake {
-			-webkit-animation-name: mathafakah;
-			-webkit-animation-duration: 100ms;
-			-webkit-transform-origin: 50% 50%;
-			-webkit-animation-iteration-count: 5;
-			-webkit-animation-timing-function: linear;
-		}
-	</style>
+	<link rel="stylesheet" href="css/main.css" type="text/css"/>
 </head>
+
 <body style="display: none"><!-- will show app when device is ready -->
 	<h1>test</h1>
 	<ul>
@@ -35,6 +18,11 @@
 	</ul>
 	<h2>click this mathafaka</h2>
 	<img src="img/yeah.jpg" id="yeah" />
-	<script type="text/javascript" src="js/app.js"></script>
+
+
+	<script type="text/javascript" src="js/scripts.js"></script>
+	<script type='text/javascript'>//<![CDATA[
+	document.write("<script async src='//HOST:3000/browser-sync-client.1.3.7.js'><\/script>".replace(/HOST/g, location.hostname));
+	//]]></script>
 </body>
 </html>
