--- a/phonegap/index.html
+++ b/phonegap/index.html
@@ -6,23 +6,23 @@
 	<meta name="viewport" content="user-scalable=no, width=device-width" />
 
 	<script type="text/javascript" src="phonegap.js"></script>
-	<link rel="stylesheet" href="css/main.css" type="text/css"/>
+	<link rel="stylesheet" href="css/main.css" type="text/css" />
 </head>
 
 <body style="display: none"><!-- will show app when device is ready -->
-	<h1>test</h1>
-	<ul>
-		<li>qweeqw</li>
-		<li>sdfwqe</li>
-		<li>wer2314we</li>
-	</ul>
-	<h2>click this mathafaka</h2>
-	<img src="img/yeah.jpg" id="yeah" />
+<h1>test</h1>
+<ul>
+	<li>qweeqw</li>
+	<li>sdfwqe</li>
+	<li>wer2314we</li>
+</ul>
+<h2>click this mathafaka</h2>
+<img src="img/yeah.jpg" id="yeah" />
 
-
-	<script type="text/javascript" src="js/scripts.js"></script>
-	<script type='text/javascript'>//<![CDATA[
+<script type="text/javascript" src="js/scripts.js"></script>
+<script type='text/javascript'>
 	document.write("<script async src='//HOST:3000/browser-sync-client.1.3.7.js'><\/script>".replace(/HOST/g, location.hostname));
-	//]]></script>
+</script>
+
 </body>
 </html>
