--- a/phonegap/index.html
+++ b/phonegap/index.html
@@ -17,7 +17,7 @@
 	<li>wer2314we</li>
 </ul>
 <h2>click this mathafaka</h2>
-<img src="img/yeah.jpg" id="yeah" />
+<img style="width: 100%;" src="img/yeah.jpg" id="yeah" />
 
 <script type="text/javascript" src="js/scripts.js"></script>
 <script type='text/javascript'>
