--- a/app/webroot/test.html
+++ b/app/webroot/test.html
@@ -1,20 +1,20 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
+	<meta charset="utf-8">
 
-  <title>Gulpjob Test</title>
+	<title>Gulpjob Test</title>
 
-  <link rel="stylesheet" href="css/main.min.css">
+	<link rel="stylesheet" href="css/main.min.css">
 </head>
 
 <body>
 
-	<p>testing gulpjob</p>
+<p>testing gulpjob</p>
 
-  <script src="js/scripts.min.js"></script>
-  <script type='text/javascript'>//<![CDATA[
-	document.write("<script async src='//HOST:3000/browser-sync-client.1.1.2.js'><\/script>".replace(/HOST/g, location.hostname));
+<script src="js/scripts.min.js"></script>
+<script type='text/javascript'>//<![CDATA[
+document.write("<script async src='//HOST:3000/browser-sync/browser-sync-client.1.5.1.js'><\/script>".replace(/HOST/g, location.hostname).replace(/PORT/g, location.port));
 //]]></script>
 
 </body>
