test file update

--- a/app/webroot/test.html
+++ b/app/webroot/test.html
@@ -5,14 +5,14 @@
 
 	<title>Gulpjob Test</title>
 
-	<link rel="stylesheet" href="css/main.min.css">
+	<link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
 
 <p>testing gulpjob</p>
 
-<script src="js/scripts.min.js"></script>
+<script src="js/scripts.js"></script>
 <script type='text/javascript'>//<![CDATA[
 document.write("<script async src='//HOST:3000/browser-sync/browser-sync-client.1.5.1.js'><\/script>".replace(/HOST/g, location.hostname).replace(/PORT/g, location.port));
 //]]></script>
